Fix header height on mobile

--- a/src/App.css
+++ b/src/App.css
@@ -145,4 +145,7 @@
     height: 25px;
     margin-top: 10px;
   }
+  .App-header {
+    height: 50px;
+  }
 }
